...
                  color: FlutterFlowTheme.of(context).primaryText,
                  fontSize: 22.0,
                ),
          ),
          actions: [
            FlutterFlowIconButton(
              key: ValueKey('IconButton_9dbx'),
              borderRadius: 20.0,
              borderWidth: 1.0,
              buttonSize: 51.0,
              icon: Icon(
                key: ValueKey('IconButton_9dbx'),
                Icons.check_sharp,
...
                  mainAxisSize: MainAxisSize.max,
                  children: [
                    Padding(
                      padding:
                          EdgeInsetsDirectional.fromSTEB(15.0, 0.0, 15.0, 0.0),
                      child: TextFormField(
                        key: ValueKey('NoteField_8ag4'),
                        controller: _model.noteFieldController,
                        focusNode: _model.noteFieldFocusNode,
                        autofocus: true,
                        obscureText: false,
                        decoration: InputDecoration(
                          hintText: 'write your quick note',
...
