...
          ? FocusScope.of(context).requestFocus(_model.unfocusNode)
          : FocusScope.of(context).unfocus(),
      child: Scaffold(
        key: scaffoldKey,
        backgroundColor: FlutterFlowTheme.of(context).primaryBackground,
        floatingActionButton: FloatingActionButton(
          key: ValueKey('AddNewFAB_sf2x'),
          onPressed: () async {
            _model.currentStoryDoc = await queryDailyStoryRecordOnce(
              queryBuilder: (dailyStoryRecord) => dailyStoryRecord.where(
                'dateSegment',
                isEqualTo: functions.getCurrentDateSegment(),
              ),
...
